plugins {
    id 'java'
}

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {

    implementation group: 'org.glassfish.jersey.core',
            name: 'jersey-client',
            version: '3.0.2'

    implementation group: 'org.glassfish.jersey.media',
            name: 'jersey-media-json-jackson',
            version: '3.0.2'

    implementation group: 'org.glassfish.jersey.inject',
            name: 'jersey-hk2',
            version: '3.0.2'

    implementation group: 'com.fasterxml.jackson.datatype',
            name: 'jackson-datatype-jsr310',
            version: '2.12.5'

    implementation group: 'jakarta.activation',
            name: 'jakarta.activation-api',
            version: '2.0.1'

    implementation group: 'org.apache.commons',
            name: 'commons-lang3',
            version: '3.12.0'

    implementation group: 'org.apache.commons',
            name: 'commons-csv',
            version: '1.9.0'

    testImplementation group: 'junit',
            name: 'junit',
            version: '4.13.2'

    testImplementation group: 'org.hamcrest',
            name: 'hamcrest-library',
            version: '2.2'

}

task runTest(type: JavaExec) {
    mainClass = 'util.Runner'

    classpath = sourceSets.test.runtimeClasspath
}
